<resources>
    <string name="app_name">HCI Prototype</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    
    <!--Repair Requests-->
    <string name="repair_new">New Repair Request</string>
    <string name="repair_current">Current Requests</string>
    <string name="repair_title">Title</string>
    <string name="repair_description">Short Description of Problem</string>
    <string name="repair_building">Building</string>
    <string name="repair_room">Room Number</string>
    <string name="repair_submit">Submit Repair Request</string>
    
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_aaaaaaa">aaaaaaa</string>
    <string name="tab_current_repairs">Accepted Requests</string>
    <string name="tab_your_repairs">Your Requests</string>
    <string name="title_activity_repair">RepairActivity</string>
    <string name="order_lunch">Lunch</string>
    <string name="menu_navigation">Navigation</string>
    <string name="menu_repairs">Repair Request</string>
    <string name="menu_security">Security</string>
    <string name="menu_schedule">Schedule</string>
    <string name="more_info_associations">MORE</string>
    <string name="study_associations">Study Associations</string>
    <string name="back_to_home">Back to Home</string>
    <string name="title_activity_security">SecurityActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="call_security">Call Security</string>
    <string name="call_campus_security">Call Campus Security</string>
    <string name="call_security_description">Click this button to call Campus Security. They will be able to track your location for an hour</string>
    <string name="click_here_to_call">CLICK HERE TO CALL</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_new_order">NewOrderActivity</string>
</resources>
